position item description correctly and align text to the left

--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,9 @@ opacity: 0.6742081447963801;
   display: flex;
   justify-content: center;
 }
+
+.item-description {
+  margin-right: auto; 
+  margin-left: 5.95%;
+  text-align: left;
+}
